--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -130,7 +130,7 @@ Prvi graf prikazuje zaposlenost po letih v ZDA.
 graf1
 ```
 
-Čeprav je graf enostaven se iz njega, da dosti razbrati. Vidimo, da zaposlenost v ZDA narašča do leta 2008, nato pa drastično pade, kar je sevda posledica makroekonomske finančne zadolžitvene krize, ki se je takrat začela v ZDA. Zaposlenost se ponovno začne višati v letih po 2010 in je leta 2018 najvišja. To nam daje dober znak za prihodnjo gospodarstvo države, saj bi morda tako mislili, da bo še naprej več ljudji delalo in bo tako vedno manj brezposelnosti. Lahko bi si pa mislili tudi, da bo v bližnji prihodnosti ponovno makroekonomska kriza, saj se te pojavljamo na vsakih cca. 8 do 10 let in bi zato ponovno pričakovali padec zaposlenosti. Torej iz grafa samega in brez dodatnih informacij o ostalih makroekonomskih kazalcih bi težko napovedali, kaj se bo zgodilo v prihodnjih letih. Več o tem bomo spregovorili tudi kasneje. Grafu sem tudi dodal model po metode najmanjših kvadratov, to pa predvsem zato ker sem želel izpostaviti, da če bi modelirali s to metodo nas bi to najverjetneje zavedlo in nas pripreljalo do nesmiselnih rezultatov. 
+Čeprav je graf enostaven se iz njega, da dosti razbrati. Vidimo, da zaposlenost v ZDA narašča do leta 2008, nato pa drastično pade, kar je sevda posledica makroekonomske finančne zadolžitvene krize, ki se je takrat začela v ZDA. Zaposlenost se ponovno začne višati v letih po 2010 in je leta 2018 najvišja. To nam daje dober znak za prihodnjo gospodarstvo države, saj bi morda tako mislili, da bo še naprej več ljudji delalo in bo tako vedno manj brezposelnosti. Lahko bi si pa mislili tudi, da bo v bližnji prihodnosti ponovno makroekonomska kriza, saj se te pojavljamo na vsakih cca. 8 do 10 let in bi zato ponovno pričakovali padec zaposlenosti. Torej iz grafa samega in brez dodatnih informacij o ostalih makroekonomskih kazalcih bi težko napovedali, kaj se bo zgodilo v prihodnjih letih. Več o tem bomo spregovorili tudi kasneje. Grafu sem tudi dodal model po metodi najmanjših kvadratov, to pa predvsem zato ker sem želel izpostaviti, da če bi modelirali s to metodo nas bi to najverjetneje zavedlo in nas pripreljalo do nesmiselnih rezultatov. 
 
 
 
@@ -165,11 +165,12 @@ spreminjajo čez leta.
 graf4
 ```
 Lahko opazimo podoben trend o najprejšnem zviševanju plač potem pa pri večini poklicem
-v časovnem obdobju od 2010 do 2015. Pomivalci posod so tudaj izjema, saj se jim 
-plača konstano veča. Posebaj zanimivo mi je, da so se plače natakarjev in natakaric v 
-zadnjih letih dratično večale v primerjavi s prejšnimi leti. Prav ti predstavljajo 
+v časovnem obdobju od 2010 do 2015. Pomivalci posod so tukaj izjema, saj se jim 
+plača konstantno veča. Posebej zanimivo mi je, da se plače natakarjev in natakaric v 
+zadnjih letih zelo povečale v primerjavi s prejšnimi leti. Prav ti predstavljajo 
 velik del zaposlitvene sile, kot bomo videli v naslednjem grafu, in v ZDA predstavljajo
-velik problem "tipping-a". 
+velik problem "tipping-a". Tudi blagajniki predstavljajo velik del delavne sile, a pri 
+teh ne opazimo tako velikega povečanja plač.
 
 
 
@@ -179,20 +180,20 @@ Graf prikazuje deleže poklicev t.j. boljše in slabše plačenih.
 graf5
 ```
 
-Iz grafa je zelo očitno, da največji delež predstavljajo slabše plačeni poklici, pri tem vodijo natakarji in natakarice ter pomivalci posod. Zelo majgen delež dejansko predstavljajo dobro plačani poklci, kar vodi do zelo velike neenakosti plač, kot tudi implicira slika na začetku poročila.
+Iz grafa je zelo očitno, da največji delež predstavljajo slabše plačeni poklici, pri tem vodijo natakarji in natakarice ter blagajniki. Zelo majhen delež dejansko predstavljajo dobro plačani poklci, kar vodi do zelo velike neenakosti plač, kot tudi implicira slika na začetku poročila.
 
 
 ```{r graf6, echo=FALSE, fig.align='center'}
 graf6
 ```
 
-Iz grafa je razvidno, da se je do krize število slabše plačani poklicev večalo, dobro plačanih pa je ostalo priblizno isto.
+Iz grafa je razvidno, da se je do krize število slabše plačani poklicev večalo, dobro plačanih pa je ostalo približno enako.
 Po krizi se je število slabše plačanih zmanjšalo, medtem ko je število dobro plačanih ostalo enako. Po krizi pa zopet
 vidimo enak trend kot pred krize, torej da se število slabših plačanih poklicev veča. To lahko predstavi
-problem za državo, saj pride do velike neenakosti v plačah.
+problem za državo, saj pride do velike neenakosti v plačah, četudi je zaposlenost višja.
 
 
-Zemljevid predstavlja povprečno plačo po zveznih državah. 
+Na zemljevidu so predstavljene povprečne plače za vsako zvezno državo. 
 
 ```{r zem1, echo=FALSE, fig.align='center'}
 zem1
@@ -218,7 +219,7 @@ source("analiza/analiza.r", encoding = "UTF-8")
 ```
 
 V razdelku analize si bomo pogledali enostaven primer predikcije, kako bo 
-z BDP per capita v zvezni državi Alaski v naslednjih letih. 
+z BDP per capita v zvezni državi Aljaski v naslednjih letih. 
 
 
 ```{r regression, echo=FALSE, fig.align='center'}
@@ -237,7 +238,7 @@ zem2
 
 Nekaj malega o domnevah o grupiranju držav smo že spregovorili prej, sedaj nam graf
 prikazuje eno izmed možnih grupiranj držav, po metodi voditeljev. So pa države grupirane,
-kot bi to pričakovai.
+kot smo prej posumili.
 
 ***
 
@@ -249,9 +250,9 @@ shinyAppDir("shiny", options=list(width="100%", height=1000))
 
 S pomočjo shiny-ja lahko boljše analiziramo nekatere dejavike, ki smo jih prej že obravnavali. Prvi tab nam prikazuje porazdelitev plač v ZDA. Vidimo, da je večina plač v nižjem delu (urne postavke od 10-30), medtem ko je višje plačanih plač bistveno manj. Tu ponovno vidimo neenakost med poklici. Porazdelitev nekoliko spominja na porazdelitev $\chi ^2$.
 
-Drugi tab predstavlja analizo plač glede na država in glede na leto. Vidimo, da se plače z leti povprečno nekoliko večejo, saj se pravokotniki v povprečju nekoliko gibljejo navzgor.
+Drugi tab predstavlja analizo plač glede na državo in glede na leto. Vidimo, da se plače z leti povprečno nekoliko večejo, saj se pravokotniki v povprečju nekoliko gibljejo navzgor.
 
-Tretji tab primerja BDP per capita v izbrani zvezni državi in BDP per capita v ZDA. Ter kaže primerjavo urnih postavk. Načeloma je trend, da če je BDP per capita v zvezni državi višji, so višje tudi povprečne plače in obratno, sicer pride tudi no nekaterih odstopanj, npr. Virginia se ne drži tega pravila, a izjeme ponavadi samo potrjujejo pravilo.
+Tretji tab primerja BDP per capita v izbrani zvezni državi in BDP per capita v ZDA ter kaže primerjavo urnih postavk. Načeloma je trend, da če je BDP per capita v zvezni državi višji, so višje tudi povprečne plače in obratno, sicer pride tudi no nekaterih odstopanj, npr. Virginia se ne drži tega pravila, a izjeme ponavadi samo potrjujejo pravilo.
 
 Četrti tab kaže analizo sredin plač (v urah in letno). Načeloma so prvi štirji grafi podobni v smislu, da če imajo države visoko povprečno urno postavko bodo imele tudi viskoko letno plačo. Hudih odstopanj tudkaj ni. Zanimiva mi pa je zaposlenost v ZDA, najvišja zaposlenost je v Kaliforniji, to je morda zato, ker so tam najboljši pogoji za življenje, saj smo opazili že pri analizi prejšnjega zemljevida, da so tam visoke povprečne plače.
 
