--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -256,5 +256,9 @@ Tretji tab primerja BDP per capita v izbrani zvezni državi in BDP per capita v 
 
 Četrti tab kaže analizo sredin plač (v urah in letno). Načeloma so prvi štirji grafi podobni v smislu, da če imajo države visoko povprečno urno postavko bodo imele tudi viskoko letno plačo. Hudih odstopanj tudkaj ni. Zanimiva mi pa je zaposlenost v ZDA, najvišja zaposlenost je v Kaliforniji, to je morda zato, ker so tam najboljši pogoji za življenje, saj smo opazili že pri analizi prejšnjega zemljevida, da so tam visoke povprečne plače.
 
+***
+# Zaključek
 
-
+S pomočjo projekta sem si potrdil domneve o neenakosti plač v ZDA pri tem sem pa vmes našel tudi
+nekaj rezultatov, ki so me presenetili, kar mi je bilo zelo všeč. V se lahko sklepa, da neenakost
+med poklici raste in da tudi neenakost med zveznimi državama velika. 
